# ngspice

./: %bsim6.el  .gitignore  .project  Makefile.am  README.md  README.shared-xspice  bsim6-2.cir  build-for-mac-os.sh  build_for_mac_os.sh  compile_linux.sh  compile_linux_d.sh  compile_linux_shared_d.sh  compile_shared.sh  configure.ac  definit-1.cir  definit-2.cir  definit-3.cir  definit-4.cir  ng_char_to_int.el  test-noise-1.cir  test-noise-2.cir  test-noise-3.cir  test-resistor-4.cir  tr-noise-1.el  tr-noise-2.el  tr-noise-3.el
src/: Makefile.am  main.c  ngsconvert.c  ngspice.c  sharedspice.c  tclspice.c  winmain.c
src/ciderlib/input/: bdryset.c  meshset.c
src/ciderlib/support/: logfile.c
src/frontend/: breakp.c  breakp2.c  com_compose.c  com_fft.c  com_ghelp.c  com_history.c  com_let.c  com_sysinfo.c  commands.c  control.c  cpitf.c  define.c  device.c  diff.c  dimens.c  dotcards.c  dvec.c  error.c  evaluate.c  ftesopt.c  inp.c  inpcom.c  linear.c  measure.c  misccoms.c  newcoms.c  nutinp.c  options.c  outitf.c  parse-bison.y  parse.c  postcoms.c  rawfile.c  resource.c  runcoms.c  runcoms2.c  signal_handler.c  spec.c  spiceif.c  subckt.c  (+4 more)
src/frontend/help/: textdisp.c
src/frontend/numparam/: mystring.c  numpaif.h  numparam.h  spicenum.c  xpressn.c
src/frontend/parser/: glob.c  input.c  lexical.c  numparse.c
src/frontend/plotting/: gnuplot.c  graf.c  plotit.c  test1.cir
src/frontend/trannoise/: wallace.c
src/include/ngspice/: 1-f-code.h  Makefile.am  cktdefs.h  cm.h  cmproto.h  cpextern.h  devdefs.h  dllitf.h  dvec.h  evtproto.h  klu.h  (+15 more)
src/misc/: Makefile.am  dstring.c  getopt_long_bsd.c  ivars.c  string.c  tilde.c
(+350 files in other folders)
