## Process this file with automake to produce Makefile.in

includedir = $(pkgdatadir)/include/ngspice

nodist_include_HEADERS = \
	config.h

include_HEADERS = \
	bool.h		\
	defines.h	\
	fteext.h	\
	iferrmsg.h	\
	macros.h	\
	memory.h	\
	ngspice.h	\
	stringutil.h	\
	typedefs.h

MAINTAINERCLEANFILES = Makefile.in
